--- a/app/views/convidados/index.html.erb
+++ b/app/views/convidados/index.html.erb
@@ -1,5 +1,6 @@
+<div class="container" id="convidados-container">
 <ol class="breadcrumb">
-    <li>Fiestas / <%= link_to @fiesta.nombre, @fiesta %> / Convidados </li>
+    <li><%= link_to @fiesta.nombre, @fiesta %> / Convidados </li>
   </ol>
 
 <div class="col-md-12">
@@ -45,4 +46,4 @@
     </div>
   </div>
 </div>
-
+</div>
