--- a/app/views/listas/new.html.erb
+++ b/app/views/listas/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container" id="listas-container">
   <ol class="breadcrumb">
-    <li>Fiestas / <%= link_to @fiesta.nombre, @fiesta %> / nueva lista de regalos</li>
+    <li><%= link_to @fiesta.nombre, @fiesta %> / nueva lista de regalos</li>
   </ol>
 
 <div class="col-sm-12">
