--- a/app/views/bienvenida/inicio.html.erb
+++ b/app/views/bienvenida/inicio.html.erb
@@ -47,7 +47,8 @@
           <p>
           </p>
           <p>Al final si alguién quiere traer algo que no está en la lista, se puede y si está en La Lista genial!.</p>
-          <p>Gracias por participar</p> 
+          <p>Gracias por usarla</p>
+          <i><strong>Gabriel Sarmiento</strong></i> 
         </div><!-- col-lg -->
       </div><!-- row -->
       
