ajustar diseño del home

--- a/app/views/bienvenida/inicio.html.erb
+++ b/app/views/bienvenida/inicio.html.erb
@@ -4,6 +4,8 @@
         <h1><span class="fa fa-gift"></span></h1>
         <p>Una aplicación para gestionar listas de regalos de personas descomplicadas.</p>
         <%= link_to "Regístrate!", registrarse_path, class: "btn btn-lg btn-info"%>
+        <div class="spacer"></div>
+        <i class="fa fa-angle-down"></i>
     </header>     
   </div><!-- /headerwrap -->
 
