--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -271,7 +271,7 @@ a:after {
   text-align:center;
   background-attachment: relative;
   background-position: center center;
-  min-height: 650px;
+  min-height: 450px;
   width: 100%;
   
     -webkit-background-size: 100%;
@@ -287,23 +287,32 @@ a:after {
 
 #headerwrap h1 {
   color:#ffffff;
-  margin-top: 90px;
-  padding-bottom: 30px;
+  margin-top: 30px;
+  padding-bottom: 20px;
   letter-spacing: 8px;
-  font-size: 100px;
+  font-size: 90px;
   font-weight: bold;
   text-shadow: 2px 2px 2px #000;
 }
 
 #headerwrap p {
   color:#ffffff;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 400;
   text-align: center;
   line-height: 40px;
   letter-spacing: 3px;
   margin-left: 15px;
   text-shadow: 1px 1px 1px #000;
+}
+
+#headerwrap i {
+  font-size: 35px;
+  color: #fff;
+}
+
+#headerwrap .spacer {
+margin-top: 15px;
 }
 
 #greywrap {
