ajustar firma en home

--- a/app/views/bienvenida/inicio.html.erb
+++ b/app/views/bienvenida/inicio.html.erb
@@ -38,7 +38,7 @@
       <br>
       <br>
       <div class="row">
-        <h2 class="centered">Una aplicación desde el corazón.</h2>
+        <h2 class="centered">Mensaje del desarrollador.</h2>
         <hr>
         <br>
         <div class="col-lg-offset-2 col-lg-8">
@@ -50,7 +50,7 @@
           </p>
           <p>Al final si alguién quiere traer algo que no está en la lista, se puede y si está en La Lista genial!.</p>
           <p>Gracias por usarla</p>
-          <i><strong>Gabriel Sarmiento</strong></i> 
+          <i><strong>Gabo Sarmiento</strong></i> 
         </div><!-- col-lg -->
       </div><!-- row -->
       
