--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,11 +15,11 @@
       </div>
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div class="form-group">
-          <p>Waiting confirmation for:</p>
+          <p>Correo no confirmado. Esperando confirmación del correo:</p>
           <%= resource.unconfirmed_email %>
         </div>
       <% end %>
-      <%# unless current_user.provider? %>
+      <% unless current_user.provider? %>
       <span class="help-block">Deja los siguientes campos en blanco si no quieres cambiar tu contraseña.</span>
       <div class="form-group">
         <%= f.label :password, "Contraseña" %>
@@ -29,7 +29,7 @@
         <%= f.label :password_confirmation, "Confirmar contraseña" %>
         <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', placeholder: "Confirma la contraseña" %>
       </div>
-      <%# end %>
+      <% end %>
       <div class="form-group">
         <%= f.submit "Update", class: 'btn btn-success' %>
       </div>
@@ -37,7 +37,7 @@
 
     <h3>Cancelar mi cuenta</h3>
     <div class="form-group">
-        <p><%= button_to "Cancelar mi cuenta", registration_path(resource_name), data: { confirm: "Estas segura?" }, method: :delete, class: 'btn btn-danger btn-sm' %></p>
+        <p><%= button_to "Cancelar mi cuenta", registration_path(resource_name), data: { confirm: "Lamentamos esta decisión, estás seguro de cancelar la cuenta?" }, method: :delete, class: 'btn btn-default btn-sm' %></p>
     </div>
   </div>
 </div>
