--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Bienvenido <%= @email %>!</p>
+<p>Bienvenido <%= @resource.email %>!</p>
 
 <p>Puedes confirmar tu cuenta de correo con el siguiente link:</p>
 
