Añadir texto al registro

--- a/app/views/convidado_mailer/nuevo_usuario_convidado.html.erb
+++ b/app/views/convidado_mailer/nuevo_usuario_convidado.html.erb
@@ -15,7 +15,7 @@
 
     <p>Espero que te facilite la vida esta nueva aplicación.</p>
 
-    <p>Saludos,</p>
+    <p>Un abrazo,</p>
     <p><strong>Gabo Sarmiento</strong></p>
 
   </body>
