Añadir textos de registro

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -39,5 +39,8 @@
       </div>
     <% end %>
   </div>
+  <div class="col-md-4">
+      <div class="alert alert-warning"> <strong>Mantra del manejo de datos en La Lista</strong> <p>En el país del sagrado corazón estaría muy mal profanar tu correo, es casi sagrado, por eso nunca recibirás spam de la aplicación.</p><p>Tu facebook si es sagrado, o al menos eso creemos, entonces al ingresar con tu cuenta nunca postearemos nada en tu nombre sin tu autorización.</p><p>Seguiremos trabajando para darte razones para que te guste La Lista y hacer que hacer listas de regalos sea mucho más agradable para todos.</p></div>
+    </div>
 </div>
 </div>
