--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -615,3 +615,21 @@ sm {
   background: white;
   padding: 10px;
 }
+
+.btn-modal {
+  display: inline-block;
+  position: relative;
+  span {
+    left: 0;
+    top: 0;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: rgba(0,0,0,0.3);
+    color: white;
+    opacity: 0;
+    padding-top: 20px;
+    font-weight: bold;
+    font-size: 20px;
+  }
+}
