--- a/app/views/regalos/_regalo.html.erb
+++ b/app/views/regalos/_regalo.html.erb
@@ -4,6 +4,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 pull-left">
             <a href="" class="btn btn-default btn-modal" data-selector="<%= "modal-regalo-#{regalo.id}" %>">
+              <span class="fa fa-search-plus" id="ver-modal"></span>
             <%= image_tag(regalo.imagen.thumb.url) if regalo.imagen? %>
             </a>
           </div>
@@ -84,18 +85,18 @@
               <p><%= simple_format(regalo.descripcion) %>
               </p>
               <% if regalo.donde_lo_consigues %>
-              <p>tip del anfitrión:</p>
-              <i><%= simple_format(regalo.donde_lo_consigues) %>
-              </i>
+              <p>Tip del anfitrión:
+              <i><%= simple_format(regalo.donde_lo_consigues) %></i></p>
+              
               <% end %>
-              <p><%= link_to 'Más info aquí', regalo.url if regalo.url? %>
+              <p><%= link_to 'Link de referencia', regalo.url if regalo.url? %>
               </p>
               <hr>
               <div class="imagen text-center">
               <%= image_tag(regalo.imagen.normal.url) if regalo.imagen? %></div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
         </div>
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
