ajustar diseño vista index listas

--- a/app/views/listas/show.html.erb
+++ b/app/views/listas/show.html.erb
@@ -34,7 +34,9 @@
               <div class="hover">
                 <%= render partial: "regalos/regalo", locals: {fiesta: @fiesta, lista: @lista,regalo: regalo} %>
               </div>
-              <hr>
+             <div class="text-with-hr">
+                <span></span>
+              </div>
               <% end %>
             
           </div>
@@ -53,7 +55,9 @@
               <div class="hover">
                 <%= render partial: "regalos/regalo", locals: {fiesta: @fiesta, lista: @lista, regalo: regalo} %>
               </div>
-              <hr>
+              <div class="text-with-hr">
+                <span></span>
+              </div>
               <% end %>
           </div>
         </div>
@@ -71,7 +75,9 @@
             <div class="hover">
             <%= render partial: "regalos/regalo", locals: {fiesta: @fiesta, lista: @lista, regalo: regalo} %>
             </div>
-            <hr>
+            <div class="text-with-hr">
+              <span></span>
+            </div>
           <% end %>
           </div>
         </div>
