Editar leyenda de inicio

--- a/app/views/bienvenida/inicio.html.erb
+++ b/app/views/bienvenida/inicio.html.erb
@@ -2,7 +2,7 @@
   <div id="headerwrap" id="home" name="home">
   <header class="clearfix">
         <h1><span class="fa fa-gift"></span></h1>
-        <p>Una aplicación para gestionar listas de regalos de personas descomplicadas.</p>
+        <p>Una aplicación para gestionar listas de regalos de una manera descomplicada.</p>
         <%= link_to "Regístrate!", registrarse_path, class: "btn btn-lg btn-info"%>
         <div class="spacer"></div>
         <i class="fa fa-angle-down"></i>
