--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -613,7 +613,7 @@ sm {
 .text-with-hr span {
   display: inline-block;
   background: white;
-  padding: 0 0 20px 0;
+  padding: 7px 0 20px 0;
 }
 
 .btn-modal {
