--- a/app/views/fiestas/invitaciones.html.erb
+++ b/app/views/fiestas/invitaciones.html.erb
@@ -11,8 +11,16 @@
       <% unless @invitaciones_ids.empty? %>
         <% @invitaciones_ids.each do |id| %>
         <div id="invitacion-<%= id %>" class="lista-fiestas">
-          <span><small><strong>[<%= Fiesta.find(id).fecha %>]</strong></small></span>
-          <span><%= link_to Fiesta.find(id).nombre, fiesta_path(Fiesta.find(id)) %></span>
+          <span><small><strong>[
+            <% if (Fiesta.find(id).fecha_y_hora_inicio.to_date - Date.today).to_i > 0 %>
+              Faltan <%= pluralize((Fiesta.find(id).fecha_y_hora_inicio.to_date - Date.today).to_i, 'Día') %>
+            <% elsif (Fiesta.find(id).fecha_y_hora_inicio.to_date - Date.today).to_i == 0 %>
+              Hoy estamos de fiesta!
+            <% else %>
+              Finalizada.
+            <% end %>]
+          </strong></small></span>
+          <span><strong><%= link_to Fiesta.find(id).nombre, fiesta_path(Fiesta.find(id)) %></strong></span>
           <span><small>Invitado por: <%= Fiesta.find(id).users.first.email %></small></span>
         </div>
         <% end %>
