--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
             <div class="user-info">
             <% if current_user %>
               Hola <%= link_to (current_user.name || current_user.email), edit_user_registration_path %>! <%= link_to destroy_user_session_path, method: :delete do %>
-               Cerrar sesión <i class="fa fa-power-off"></i>
+               Salir <i class="fa fa-power-off"></i>
               <% end %>
             <% else %>
               <%= link_to "Ya eres miembro? Ingresa", ingresar_path %> 
