--- a/app/views/fiestas/show.html.erb
+++ b/app/views/fiestas/show.html.erb
@@ -1,7 +1,7 @@
 <!-- ==== SECTION DIVIDER1 -->
   <section class="section-divider textdivider divider1">
     <div class="container">
-      <h1><%= @fiesta.nombre.to_s.capitalize %></h1>
+      <h1><%= @fiesta.nombre %></h1>
       <hr>
       <p>Invita <%= @fiesta.users.first.name %></p>
       <% if policy(@fiesta).update? %>
