--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,8 @@
             <% end %>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <!-- <li class="dropdown">
+            <% if current_user.role?(:admin) %>
+            <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">funcionalidades en desarrollo<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="#">tips para fiestas</a></li>
@@ -56,7 +57,8 @@
                   <li class="divider"></li>
 
                 </ul>
-            </li> -->
+            </li>
+            <% end %>
             <li><div class="user-info">
             <% if current_user %>
               Hola <%= link_to (current_user.name || current_user.email), edit_user_registration_path %>! <%= link_to destroy_user_session_path, method: :delete do %>
