--- a/app/views/regalos/_controles.html.erb
+++ b/app/views/regalos/_controles.html.erb
@@ -1,33 +1,33 @@
 <% case regalo.compromiso.value %>
     <% when "disponible" %>
-    <div>
+    <span>
       <%= link_to "lo quiero reservar", "#", class: "btn btn-info btn-xs btn-modal", "data-toggle" => "modal", "data-target" => "#modal-regalo-#{regalo.id}", rel: "tooltip", title: "Resérvalo antes de que sea demasiado tarde." %>
-    </div>
+    </span>
     <% when "reservado" %>
     <% if current_user == regalo.compromiso.user || policy(regalo).edit? %>
       <small>Reservado por <%= regalo.compromiso.user.name.humanize.titleize %></small>
-    <div>
+    <span>
       <%= link_to "liberarlo", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-success btn-xs", data: {toggle: "tooltip", placement: "top"}, title: "Volverá a la lista de regalos disponibles" %>
-    </div>
-    <div>
+    </span>
+    <span>
       <%= link_to "lo he comprado", fiesta_lista_regalo_comprar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-info btn-xs", data: {toggle: "tooltip", placement: "top"}, title: "Notifica al anfitrión de tu compra" %>
-    </div>
+    </span>
     <% else %>
-      <div>
+      <span>
         <%= link_to "regalo reservado", "", class: "btn btn-default btn-xs disabled" %>
         <br>
-      </div>
+      </span>
     <% end %>
     <% when "comprado" %>
-      <div>
+      <span>
       <%= link_to "regalo comprado", "", class: "btn btn-success btn-xs disabled" %>
-      </div>
+      </span>
       <% if policy(regalo).edit? %>
-          <div>
+          <span>
             <small>Comprado por <%= regalo.compromiso.user.name %></small>
-          </div>
-        <div>
+          </span>
+        <span>
         <%= link_to "liberar", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-default btn-xs" %>
-        </div>
+        </span>
       <% end %>
     <% end %>
